# claude-code-studio

./: .gitignore  LICENSE  README.md  README_CN.md  ROADMAP.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
examples/: hooks.json  settings.json
scripts/: launch-zellij.sh  launch.sh  runtime-state.sh  status.sh
studio/: __main__.py  db.py  db_redis.py  mux.py  server.py  watcher.py
tests/: test_db.py  test_db_redis.py  test_examples.py  test_integration.py  test_mux.py  test_scripts.py  test_server.py  test_watcher.py
